--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "typescript": "^4.4.2"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
