--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon dist/app",
-    "tsc": "tsc --watch"
+    "tsc": "tsc --watch",
+    "db": "cross-env NODE_ENV=development node dist/init-db.js"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
@@ -20,7 +21,7 @@
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
-    "socket.io": "^4.1.3",
+    "socket.io": "^4.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
