--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "cross-env NODE_ENV=development nodemon cache/app",
     "tsc": "tsc --watch",
     "db": "cross-env NODE_ENV=development node cache/init-db.js",
-    "build": "tsc --outDir dist && replace 'process.env.NODE_ENV' '`production`' dist -r --include='*.js' --silent",
+    "build": "npm run lint && tsc --outDir dist && replace 'process.env.NODE_ENV' '`production`' dist -r --include='*.js' --silent",
     "replace": "replace 'process.env.NODE_ENV' '`production`' dist -r --include='*.js'",
-    "serve": "node dist/app"
+    "serve": "node dist/app",
+    "lint": "eslint src/** --ext .js,.ts"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
@@ -35,6 +36,9 @@
     "@types/koa-router": "^7.4.4",
     "@types/node": "^16.7.6",
     "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "eslint": "^7.32.0",
     "nodemon": "^2.0.12",
     "replace": "^1.2.1",
     "typescript": "^4.4.2"
