--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development npx nodemon",
     "db": "cross-env NODE_ENV=development ts-node src/init-db.ts",
-    "build": "npm run lint && npm run copy && tsc --outDir dist && replace 'process.env.NODE_ENV' '`production`' dist -r --include='*.js' --silent",
-    "replace": "replace 'process.env.NODE_ENV' '`production`' dist -r --include='*.js'",
+    "build": "npm run lint && node copy.js && tsc --outDir dist && npx replace 'process.env.NODE_ENV' '`production`' ./dist -r --include='*.js' --silent",
+    "replace": "npx replace 'process.env.NODE_ENV' '`production`' ./dist -r --include='*.js'",
     "serve": "node dist/app",
-    "lint": "eslint src/** --ext .js,.ts",
-    "copy": "node copy.js"
+    "lint": "eslint src/** --ext .js,.ts"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
