--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=development npx nodemon",
-    "db": "cross-env NODE_ENV=development ts-node src/init-db.ts",
+    "db": "cross-env NODE_ENV=development node --loader ts-node/esm src/init-db.ts",
     "build": "npm run lint && node copy.js && tsc --outDir dist && npx replace 'process.env.NODE_ENV' '`production`' ./dist -r --include='*.js' --silent",
     "replace": "npx replace 'process.env.NODE_ENV' '`production`' ./dist -r --include='*.js'",
     "serve": "node dist/app",
-    "lint": "eslint src/** --ext .js,.ts"
+    "lint": "eslint src/** --ext .js,.ts",
+    "type": "tsc --noEmit"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
@@ -22,9 +23,8 @@
     "koa-router": "^10.1.1",
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.6.5",
     "socket.io": "^4.2.0",
-    "uuid": "^8.3.2"
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.5",
@@ -33,7 +33,6 @@
     "@types/koa-log4": "^2.3.3",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^16.7.6",
-    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
