--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     // "strictNullChecks": true,                    /* Enable strict null checks. */
     // "strictFunctionTypes": true,                 /* Enable strict checking of function types. */
     // "strictBindCallApply": true,                 /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
-    "strictPropertyInitialization": false,        /* Enable strict checking of property initialization in classes. */
+    "strictPropertyInitialization": false, /* Enable strict checking of property initialization in classes. */
     // "noImplicitThis": false,                      /* Raise error on 'this' expressions with an implied 'any' type. */
     // "alwaysStrict": true,                        /* Parse in strict mode and emit "use strict" for each source file. */
     /* Additional Checks */
@@ -66,5 +66,8 @@
   },
   "include": [
     "src"
+  ],
+  "files": [
+    "src/shim.d.ts"
   ]
 }
