--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "cross-env NODE_ENV=development npx nodemon",
-    "serve": "cross-env NODE_ENV=production npx nodemon",
-    "db": "cross-env NODE_ENV=development node --loader ts-node/esm src/init-db.ts",
-    "build": "npm run lint && node copy.js && tsc --outDir dist && npx replace 'process.env.NODE_ENV' '`production`' ./dist -r --include='*.js' --silent",
-    "replace": "npx replace 'process.env.NODE_ENV' '`production`' ./dist -r --include='*.js'",
+    "start": "dotenv -e .env.development nodemon",
+    "serve": "dotenv -e ../.env.production node ./src/app.js",
+    "serve:dev": "dotenv -e .env.production node ./dist/src/app.js",
+    "db": "dotenv -e .env.development npm run initdb",
+    "initdb": "node --experimental-specifier-resolution=node --loader ts-node/esm src/init-db.ts",
     "lint": "eslint src/** --ext .js,.ts",
-    "type": "tsc --noEmit"
+    "type": "tsc --noEmit",
+    "build": "npm run lint && node copy.js && rollup -c"
   },
   "dependencies": {
     "@socket.io/cluster-adapter": "^0.1.0",
     "@socket.io/sticky": "^1.0.1",
     "cross-env": "^7.0.3",
+    "dotenv-cli": "^4.1.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-jwt": "^4.0.1",
@@ -29,6 +31,8 @@
     "typeorm": "^0.2.38"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.3",
@@ -39,7 +43,8 @@
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
     "nodemon": "^2.0.14",
-    "replace": "^1.2.1",
+    "rollup": "^2.63.0",
+    "rollup-plugin-typescript2": "^0.31.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
